# LuaNotes

./: .gitignore  CMakeLists.txt  LuaHello-Best-Practice.lua  LuaHello-EN.lua  LuaHello-day-1.lua  LuaHello-day-2.lua  LuaHello-day-3.lua  LuaHello.lua  Lua_Study_Plan.md  MyModule.lua  README.md  build.bat  debug_test.lua  main.c  run-lua-utf8.bat  script.lua  setup-lua.bat
lua_c_module/: CMakeLists.txt  build.bat  build.sh
lua_c_module/src/: luamodule.c  luamodule.h  myluamodule.def
lua_c_module/test/: test_module.lua
